Add decoder and encoder futures

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,11 @@ readme = "README.md"
 license = "AGPL-3.0"
 
 [dependencies]
-async-codec = "0.1.0"
+async-codec = "0.1.1"
+futures-core = "0.2.0-alpha"
+futures-io = "0.2.0-alpha"
+
+[dev-dependencies]
+async-ringbuffer = "0.3.0"
+atm-io-utils = { version = "0.2.2", features = ["quickcheck"] }
+quickcheck = "0.6"
