--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = "AGPL-3.0"
 
 [dependencies]
-async-codec = "0.1.1"
+async-codec = { git = "https://github.com/AljoschaMeyer/async-codec-rs" }
 futures-core = "0.2.0-alpha"
 futures-io = "0.2.0-alpha"
 futures-executor = "0.2.0-alpha"
