Add back test code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ futures-executor = "0.2.0-alpha"
 futures-util = "0.2.0-alpha"
 
 [dev-dependencies]
-# async-byteorder = { git = "https://github.com/AljoschaMeyer/async-byteorder" }
+async-byteorder = "0.2.0"
 async-ringbuffer = "0.3.0"
 atm-io-utils = { version = "0.2.4", features = ["quickcheck"] }
 quickcheck = "0.6"
